stretch bug

--- a/FLEXBOX/style.css
+++ b/FLEXBOX/style.css
@@ -138,3 +138,9 @@ body{
     line-height: 90px;
     font-size: 20px;
 }
+.strech{
+    align-items: stretch;
+}
+.ai >stretch> div{
+    height: unset;
+}
